cmake_minimum_required(VERSION 4.2)
project(clox C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -g3 -fno-omit-frame-pointer")

add_executable(clox main.c
        common.h
        chunk.h
        chunk.c
        memory.h
        memory.c
        debug.h
        debug.c
        value.h
        value.c
        rle.c
        rle.h
        vm.c
        vm.h
        compiler.c
        compiler.h
        scanner.c
        scanner.h)
